--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                 </div>
                 <div class="col-md-4 text-center">
                     <i class="fas fa-thumbs-up fa-5x text-danger mb-4"></i>
-                    <h1 class="text-white mb-3">Creativity</h1>
+                    <h1 class="text-white mb-3">Quality</h1>
                     <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae modi odit enim,
                         laudantium in dignissimos alias eum suscipit quos quam inventore illo ea aliquam assumenda.</p>
                 </div>
                 <div class="col-md-4 text-center">
                     <i class="fas fa-handshake fa-5x text-danger mb-4"></i>
-                    <h1 class="text-white mb-3">Creativity</h1>
+                    <h1 class="text-white mb-3">Experience</h1>
                     <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae modi odit enim,
                         laudantium in dignissimos alias eum suscipit quos quam inventore illo ea aliquam assumenda.</p>
                 </div>
